Wrote some more

--- a/problems.Rmd
+++ b/problems.Rmd
@@ -784,7 +784,7 @@ As a final note, a key consequence of the associativity of monoids is linearizab
 
 #### Programming with monoids {#programming-with-monoids}
 
-Monoids translate well to code and are in fact frequently used in programming, particularly functional programming [see e.g. @milewski2018; @stepanov2009; @stepanov2014]. Further, we can even test whether an arbitrary summary function conforms to our specific functorial properties. For instance, in R, if we replace the set union operation with vector/array concatenation (the `c()` function), and provided that we have some three representative data vectors `x`, `y`, and `z`, we can test associativity as follows:
+Monoids translate well to code and are in fact frequently used in programming, particularly functional and generic programming [see e.g. @milewski2018; @stepanov2009; @stepanov2014]. Further, with few assumptions, we can even directly test whether an arbitrary summary function conforms to a monoid. For instance, in R, if we replace the set union operation with vector/array concatenation (the `c()` function), and provided that we have some three representative data vectors `x`, `y`, and `z`, we can test associativity as follows:
 
 ```{r}
 #| results: "hold"
@@ -797,7 +797,7 @@ sum(c(c(x, y), z)) == sum(c(sum(c(x, y)), z))
 mean(c(c(x, y), z)) == mean(c(mean(c(x, y)), z))
 ```
 
-Likewise, we can easily test the unitality property with a given neutral element `e`. We could even create a wrapper function to test whether a given function with a neutral element forms monoid:
+Likewise, we can easily test the unitality property for a given neutral element `e`. We could even create a wrapper function to test whether a given function with a neutral element forms monoid:
 
 ```{r}
 #| results: "hold"
@@ -828,11 +828,11 @@ is_monoid(median, 0, x, y, z)
 is_monoid(sd, 0, x, y, z)
 ```
 
-A couple of points. First, based on what we have shown before, we could simplify our task by defining `fn` to a binary function which takes two (scalar) arguments instead of a vector. This binary formulation would demonstrate that, for example, `mean2 == median2 == function(x, y) (x + y) / 2` (median of even number of elements is the average of the middle two), and so if we can show that `(x + y) / 2` is not associative, we disprove both `mean2` and `median2` being monoids. Also, more intuitively, with three or more values, applying `median2` amounts to repeatedly averaging values pairwise, and this operation is clearly different from simply picking the middle value. Furthermore, the binary formulation of `fn` also makes the absence of a neutral element `e` clearer. For instance, it is not difficult to see that there is no (constant) value `e` such that `(x + e) / 2 == x` for all `x`. Thus, generally, it might make more sense to always formulate `fn` as a binary function. However, in the code block above, I used the vector formulation to ensure consistency with function definitions of `mean`, `median`, and `sd`. 
+A couple of points. First, based on what we have shown before, we could simplify our task by defining `fn` as a binary function which takes two (scalar) arguments instead of a vector. This binary formulation would demonstrate that, for example, `mean2 == median2 == function(x, y) (x + y) / 2` (median of even number of elements is the average of the middle two), and so if we can show that `(x + y) / 2` is not associative, we disprove both `mean2` and `median2` being monoids. More intuitively, with three or more values, applying `median2` amounts to repeatedly averaging values pairwise, and this operation is clearly different from picking the middle value. Furthermore, the binary formulation of `fn` also makes it easier to identify whether neutral element `e` exists or not. For instance, it is not difficult to see that there is no (constant) value `e` such that `(x + e) / 2 == x` for all `x`. Thus, generally, it might be more advantageous to always formulate `fn` as a binary function. However, in the code block above, I used the vector formulation to allow for comparison with R standard library functions such as `mean`, `median`, and `sd`.
 
-Second, the properties of associativity and unitality should hold for *all* possible values. Thus, testing that a function passes the `is_monoid` test for any three specific values is not sufficient. For instance, while it is the case that `mean(c(c(2, 4), 3)) == mean(c(mean(c(2, 4)), 3))`, this does not prove that `mean` is associative^[In fact, with a bit of high-school algebra, it can be shown that the average function is associative for any triplets $x, y, z$ where $3x + 3y + 6z = 4x + 4y + 4z$]. However, a single counter-example does definitely prove that a summary function is *not* monoid, as is the case, for example, with `mean`, `median`, and `sd` functions above. Thus, while not a fool-proof method, the `is_monoid` function serves as a valuable sanity check for potential monoid candidates.
+Second, the properties of associativity and unitality need to hold for *all* possible inputs in the function's domain. Thus, if a function passes the `is_monoid` test for any three specific values, this is not sufficient for proving that it is monoidal. For instance, while it is the case that `mean(c(c(2, 4), 3)) == mean(c(mean(c(2, 4)), 3))`, this does not prove that `mean` is associative^[In fact, with a bit of high-school algebra, it can be shown that the average function will appear associative for any triplets $x, y, z$ where $3x + 3y + 6z = 4x + 4y + 4z$ holds.]. However, a single counter-example does definitely prove that a summary function is *not* monoid, as is the case, for example, with `mean`, `median`, and `sd` functions above. Thus, while not a fool-proof method, functions like `is_monoid` function can serve as a valuable sanity check.
 
-Finally, monoids also imply certain computational advantages. Specifically, because the operation of reducing a set of $n$ elements via a monoid translates into $n - 1$ binary operations, we know we can always compute the result in linear ($O(n)$) time (provided that the product $\otimes$ itself is constant). Additionally, due to associativity, monoids are easily parallelizable (embarassingly parallel), making them useful distributed computing strategies such as MapReduce [@lin2013]. Finally, when the total product consists of repeatedly combining the same element (i.e. $a \otimes a \otimes a \otimes \ldots$), the result can be computed in sub-linear $O(\log n)$ time, by applying the ancient Egyptian/Russian peasant multiplication-via-squaring algorithm [@stepanov2009; @stepanov2014]^[This method can also be extended to situations where we take the the product of a commutative series with fixed increment, see Appendix \@ref(gauss-russian-monoids)].     
+Finally, monoids also imply certain computational advantages. Specifically, because the operation of reducing a set of $n$ elements via a monoid translates into $n - 1$ binary operations, we know we can always compute the result in linear ($O(n)$) time (provided that the product $\otimes$ itself is constant). Additionally, due to associativity, monoids are easily parallelizable (embarassingly parallel), making them useful in distributed computing strategies such as MapReduce [@lin2013]. Finally, when the total product consists of repeated products of the same element (i.e. $a \otimes a \otimes a \otimes \ldots$), the result can be computed in sub-linear $O(\log n)$ time, by applying the squaring algorithm [also known as the russian peasant or egyptian algorithm, see @stepanov2009; @stepanov2014]^[This method can also be extended to situations where we take the the product of a commutative series with fixed increment, see Appendix \@ref(gauss-russian-monoids)].     
 
 #### Groups and inverses {#groups-inverses}
 
